update deploy instruction
